Fixed padding on mobile hero section

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ p {
 
 .hero-content {
   max-width: 100%;
-  padding: 16rem 3rem 10rem 3rem;
+  padding: 12rem 3rem 8rem 3rem;
 }
 
 .hero-cta {
